--- a/app/Resources/views/course_info/presentation/form/teachers.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teachers.html.twig
@@ -9,10 +9,10 @@
         </div>
         <div class="mb-2">
             <label placeholder="Source"></label>
-            {{ form_widget(form.teacherSource) }}
+            {{ form_row(form.teacherSource) }}
         </div>
         <div class="mb-2">
-            {{ form_widget(form.login) }}
+            {{ form_row(form.login) }}
         </div>
         <div class="mb-2">
             {{ form_widget(form.emailVisibility, { label_attr: {class: 'checkbox-custom'}}) }}
