--- a/app/Resources/views/course_info/presentation/presentation.html.twig
+++ b/app/Resources/views/course_info/presentation/presentation.html.twig
@@ -34,9 +34,22 @@
         <div class="card-body">
         </div>
     </div>
-    {#<section>
-        {% include('course_info/presentation/view/teaching_mode.html.twig') %}
-    </section>#}
+
+    <div class="card toggle-focus my-2 shadow card-syllabus"
+         data-view-url="{{ path('course_presentation_teaching_mode_view', {'id': courseInfo.id }) }}"
+         data-form-url="{{ path('course_presentation_teaching_mode_form', {'id': courseInfo.id }) }}"
+    >
+        <div class="card-header">
+            <div class="d-flex justify-content-between">
+                <h3>Mode d'enseignement</h3>
+                <button type="button" class="edit-button btn btn-primary rounded">
+                    Mettre à jour
+                </button>
+            </div>
+        </div>
+        <div class="card-body">
+        </div>
+    </div>
 
 {% endblock %}
 
