--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -85,7 +85,7 @@
              * Load modal content and show it
              */
 
-            $('.modal-action').click(function () {
+            $(document).on('click', '.modal-action', function () {
                 let title = $(this).data('action-title');
                 let url = $(this).data('action-url');
                 let event = $(this).data('action-event');
@@ -128,7 +128,7 @@
                     url,
                     data
                 ).done(function (response) {
-                    if (Syllabus.handleAjaxResponseModal(response)) {
+                    if (Syllabus.handleAjaxResponseModal(response, $modal_app_body)) {
                         $modal_app.modal('hide');
                         document.location.reload();
                     }
