--- a/app/Resources/views/course_info/presentation/form/general.html.twig
+++ b/app/Resources/views/course_info/presentation/form/general.html.twig
@@ -77,10 +77,10 @@
 </div>
 
 <div class="mt-2">
-    <button type="button" class="submit-button btn btn-primary submit rounded" data-url="{{ path('course_presentation_general_view', {'id': courseInfo.id, 'action': 'submit' }) }}">
+    <button type="button" class="submit-button btn btn-primary submit rounded" data-url="{{ path('course_presentation_general_view', {'id': courseInfo.id}) }}">
         Sauvegarder
     </button>
-    <button type="button" class="cancel-button btn btn-secondary rounded" data-url="{{ path('course_presentation_general_view', {'id': courseInfo.id, 'action': 'cancel' }) }}">
+    <button type="button" class="cancel-button btn btn-secondary rounded" data-url="{{ path('course_presentation_general_view', {'id': courseInfo.id}) }}">
         Annuler
     </button>
 </div>
