fix merge conflicts

--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -1,4 +1,9 @@
 {% extends 'base_layout.html.twig' %}
+
+{% block modals %}
+    {% include 'default/modal.html.twig' %}
+{% endblock %}
+
 {% block navbar %}
     <ul class="navbar-nav">
         <li class="nav-item">
