--- a/app/Resources/views/default/modal.html.twig
+++ b/app/Resources/views/default/modal.html.twig
@@ -1,4 +1,4 @@
-<div class="modal fade" id="modal_app" data-backdrop="static" tabindex="-1" role="dialog">
+<div class="modal fade" id="modal_app" data-backdrop="static" tabindex="-1" role="dialog" aria-hidden="true" data-show="false">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
