ajouter une permission pour un syllabus

--- a/app/Resources/views/admin_layout.html.twig
+++ b/app/Resources/views/admin_layout.html.twig
@@ -17,7 +17,7 @@
     </ul>
 {% endblock %}
 
-{% set logoHref = path('app_admin_year_index') %}
+{% set logoHref = path('app_admin_course_info_index') %}
 {% block sidebar %}
     <div class="sidebar">
         <!-- Sidebar user (optional) -->
