--- a/app/Resources/views/course_info/admin/index.html.twig
+++ b/app/Resources/views/course_info/admin/index.html.twig
@@ -2,7 +2,7 @@
 {% set h1 = 'Liste des syllabus' %}
 
 {% block modals %}
-    <div class="modal fade" id="courseInfoDuplicationModal" style="display: none;" aria-hidden="true" data-show="{{ isFormValid ? "false" : "true" }}">
+    <div class="modal modal-initialized fade" id="courseInfoDuplicationModal" style="display: none;" aria-hidden="true" data-show="{{ isFormValid ? "false" : "true" }}">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
