--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -16,7 +16,7 @@
     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
         <li class="nav-item">
-            <a href="{{ path('app_admin_course_info_index') }}" class="nav-link {{ printActiveAdminSidebarLink(['app_admin_course_info']) }}">
+            <a href="{{ path('app_admin_course_info_index') }}" class="nav-link {{ printActiveAdminSidebarLink(['app_admin_course_info_']) }}">
                 <i class="nav-icon fas fa-graduation-cap"></i>
                 <p>
                     Syllabus
@@ -111,7 +111,7 @@
         </li>
 
         <li class="nav-item">
-            <a href="{{ path('app_admin_course_info_field_index') }}" class="nav-link {{ printActiveAdminSidebarLink(['app_admin_syllabus_duplication_field']) }}">
+            <a href="{{ path('app_admin_course_info.field_index') }}" class="nav-link {{ printActiveAdminSidebarLink(['app_admin_course_info.field']) }}">
                 <i class="nav-icon fas fa-copy"></i>
                 <p>
                     Config duplication
