--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,6 +35,7 @@
         <i class="fas fa-circle-notch text-primary fa-2x fa-spin"></i>
     </div>
 </div>
+{% include 'default/messages.html.twig' %}
 <div id="app" class="wrapper">
     {% block main %}{% endblock %}
 </div>
