--- a/app/Resources/views/default/messages.html.twig
+++ b/app/Resources/views/default/messages.html.twig
@@ -1,4 +1,4 @@
-<div class="{{ container_class }}" id="alerts_container">
+<div class="flashes">
     {% for type, messages in app.flashes %}
         {% for message in messages %}
             <div class="alert alert-{{ type }} alert-dismissible fade show" role="alert">
