--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -530,5 +530,16 @@ label.toggle-off {
     cursor: pointer;
 }
 
+/**
+ * Flash messages
+ */
+.flashes {
+    position: fixed;
+    top: 0;
+    right: 0;
+    max-width: 500px;
+    opacity: 0.9;
+    z-index: 1050;
+}
 
 
