--- a/app/Resources/views/course_info/presentation/presentation.html.twig
+++ b/app/Resources/views/course_info/presentation/presentation.html.twig
@@ -2,7 +2,7 @@
 
 {% block subContent %}
 
-    <div class="card my-2 shadow card-syllabus"
+ {#   <div class="card my-2 shadow card-syllabus"
          data-view-url="{{ path('course_presentation_general_view', {'id': courseInfo.id }) }}"
          data-form-url="{{ path('course_presentation_general_form', {'id': courseInfo.id }) }}"
     >
@@ -34,7 +34,7 @@
         <div class="card-body">
         </div>
     </div>
-
+#}
     <div class="card toggle-focus my-2 shadow card-syllabus"
          data-view-url="{{ path('course_presentation_teaching_mode_view', {'id': courseInfo.id }) }}"
          data-form-url="{{ path('course_presentation_teaching_mode_form', {'id': courseInfo.id }) }}"
