--- a/app/Resources/views/course_info/presentation/view/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/view/teaching_mode.html.twig
@@ -121,6 +121,13 @@
     <h3>Hybride</h3>
     <div class="row mt-3">
         <div class="col">
+            <div class="d-flex mb-2">
+                <div class="d-flex flex-column">
+                        <h4 class="font-weight-bold">
+                            Présentiel
+                        </h4>
+                </div>
+            </div>
             <div class="d-flex">
                 <div class="d-flex flex-column">
                         <span class="font-weight-bold">
@@ -218,6 +225,13 @@
             </div>
         </div>
         <div class="col">
+            <div class="d-flex mb-2">
+                <div class="d-flex flex-column">
+                    <h4 class="font-weight-bold">
+                        A distance
+                    </h4>
+                </div>
+            </div>
             <div class="d-flex">
                 <div class="d-flex flex-column">
                         <span class="font-weight-bold">
