--- a/app/Resources/views/course_info/presentation/form/general.html.twig
+++ b/app/Resources/views/course_info/presentation/form/general.html.twig
@@ -77,7 +77,7 @@
 </div>
 
 <div class="mt-2">
-    <button type="button" class="submit-button btn btn-primary submit rounded" data-url="{{ path('course_presentation_general_view', {'id': courseInfo.id}) }}">
+    <button type="submit" class="submit-button btn btn-primary submit rounded" data-url="{{ path('course_presentation_general_view', {'id': courseInfo.id}) }}">
         Sauvegarder
     </button>
     <button type="button" class="cancel-button btn btn-secondary rounded" data-url="{{ path('course_presentation_general_view', {'id': courseInfo.id}) }}">
